--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,7 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": ["\\Users\\codyj\\node_modules\\jquery\\dist\\jquery.min.js"]
           },
           "configurations": {
             "production": {
